--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -11,9 +11,10 @@
 }
 
 :host {
+  margin-top: 13px;
   width: 100%;
-  height: auto;
-  line-height: 60px;
+  height: 47px;
+  line-height: 47px;
   background-color: white;
   display: -webkit-box;
   display: -moz-box;
