--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,12 +1,15 @@
 <div (mouseenter)="sendHide(false)" (mouseleave)="sendHide(true)" class="padding-header" *ngIf="desktopMode">
   <!-- TODO to move to features the desktopMode -->
   <div *ngIf="isUserLoggedIn" id="sidebar-container"
-       [ngStyle]="{'min-width': hide && userType == '2' ? '20px' : '230px', 'max-width': hide ? '50px' : '230px'}">
+       [ngStyle]="{'min-width': hide && userType == '2' ? '20px' : '230px', 'max-width': hide ? '55px' : '230px'}">
 
     <ul class="list-group sticky-top sticky-offset">
       <li style="background-color: white"
           class="list-group-item sidebar-separator-title d-flex align-items-center menu-collapsed red-sardcoin">
-        <small *ngIf="!hide || userType != '2'" class="font-weight-bold text-uppercase">Menu</small>
+        <h6 *ngIf="!hide" class="font-weight-bold text-uppercase">Menu</h6>
+        <div *ngIf="hide && userType == 2" class="text-center d-inline-block">
+          <span class="fas fa-chevron-circle-right" style="margin-left: -6px; font-size: 1.8rem;"></span>
+        </div>
       </li>
 
       <div *ngIf="this.userType == '1' || this.userType == '0'">
@@ -25,11 +28,11 @@
           <span class="menu-collapsed">Reports</span>
         </a>
       </div>
-      <div *ngIf="this.userType == '2' || this.userType == '0'">
+      <div *ngIf="this.userType == '2' || this.userType == '0'" class="mt-4">
 
         <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}" >
-            <span class="fas fa-shopping-basket icon-dimension"></span>
+            <span class="fas fa-store icon-dimension" [ngStyle]="{'margin-left': hide && userType == '2' ? '-3px ' : '0 '}"></span>
           </div>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">Shopping</span>
         </a>
@@ -47,7 +50,7 @@
         </a>
         <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
-            <span class="fas fa-file-import icon-dimension"></span>
+            <span class="fas fa-file-upload icon-dimension"></span>
           </div>
           <span *ngIf="!hide || userType == '0' " class="menu-collapsed">Importa coupon</span>
         </a>
