--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -1,13 +1,12 @@
 <app-core-header></app-core-header>
 <div class="row" id="body-row">
-  <app-core-sidebar id="padding-top-sidebar" *ngIf="desktopMode && (loginData | async)"></app-core-sidebar>
+  <app-core-sidebar *ngIf="desktopMode && (loginData | async)"></app-core-sidebar>
   <app-core-breadcrumb  class="px-0" id="breadcrumb-style" ></app-core-breadcrumb>
   <div class="px-0" id="main-content" [ngStyle]="{'margin-left': ((loginData | async) && desktopMode ) ? width : '0'}">
 
     <div id="main-container"> <!-- levato container-fluid -->
       <router-outlet></router-outlet>
     </div>
-
-    <app-core-footer></app-core-footer>
   </div>
+  <app-core-footer></app-core-footer>
 </div>
