--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.css
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.css
@@ -34,10 +34,22 @@ h5 {
 
 }
 
-
 .td-state {
   padding-top: 17px;
   font-size: 15px;
 }
 
+table {
+  border-collapse: collapse;
+  border: 0;
+}
 
+tbody > tr.bg-blue > td {
+  padding: 2px;
+}
+
+.img-thumbnail {
+  padding: 0 !important;
+  border: 0;
+  border-radius: 0 !important;
+}
