--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid d-none d-md-none d-xl-block">
-  <table class="table table-striped">
-    <thead>
+  <table class="table table-striped table-borderless">
+    <thead class="text-uppercase">
     <tr>
       <th style="width: 40%">Titolo</th>
       <th style="width: 10%">Immagine</th>
@@ -13,7 +13,12 @@
       <th style="width: 5%"></th>
     </tr>
     </thead>
-    <tbody>
+
+    <tr class="bg-blue">
+      <td colspan="9"></td>
+    </tr>
+
+    <tbody class="striped">
     <tr *ngFor="let coupon of couponArray">
       <td>
         <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
@@ -65,8 +70,8 @@
   </table>
 </div> <!-- XL TABLE -->
 <div class="container-fluid d-none d-md-none d-lg-block d-xl-none">
-  <table class="table table-striped">
-    <thead>
+  <table class="table table-striped table-borderless">
+    <thead class="text-uppercase">
     <tr>
       <th style="width: 40%">Titolo</th>
       <th style="width: 10%">Immagine</th>
@@ -78,7 +83,11 @@
     </tr>
     </thead>
 
-    <tbody>
+    <tr class="bg-blue">
+      <td colspan="7"></td>
+    </tr>
+
+    <tbody class="striped">
     <tr *ngFor="let coupon of couponArray">
       <td>
         <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
@@ -115,8 +124,8 @@
   </table>
 </div> <!-- LG TABLE -->
 <div class="container-fluid d-none d-md-block d-lg-none">
-  <table class="table table-striped">
-    <thead>
+  <table class="table table-striped table-borderless">
+    <thead class="text-uppercase">
     <tr>
       <th style="width: 48%">Titolo</th>
       <th style="width: 22%">Prezzo</th>
@@ -126,7 +135,11 @@
     </tr>
     </thead>
 
-    <tbody>
+    <tr class="bg-blue">
+      <td colspan="5"></td>
+    </tr>
+
+    <tbody class="striped">
     <tr *ngFor="let coupon of couponArray">
       <td>
         <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
