--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
@@ -1,34 +1,24 @@
-<div *ngIf="couponPass !== null" class="container-fluid px-0">
+<div *ngIf="orderPass !== null" class="container-fluid px-0">
   <!--<div class="row">-->
     <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
       <div [class]="classMx4" style="padding: 5px">
-        <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
-          <h3 class="card-title mb-0">{{couponPass.title}}</h3>
-          <p *ngIf="couponPass.owner">di
-            <i [routerLink]="['/reserved-area/consumer/producer-info']"
-               class="font-weight-bold text-primary cursor-pointer">{{producer === null ? null : producer.company_name}}</i>
-          </p>
+          <h3 class="card-title mb-0">Ordine N° {{orderPass.order.id}}</h3>
+          <br>
+          <i class="h5">Pagato {{formatPrice(orderPass.price)}}</i>
+          <br/>
+          <i class="h5">Data {{orderPass.purchase_time.substr(0, 10)}} alle ore {{orderPass.purchase_time.substr(11, 8)}}</i>
+          <br>
+          <br>
+          <div class="h5">Lista Coupons inclusi nell'ordine:</div>
+          <div *ngFor="let content of listTitleQuantityPrice">
+            <div *ngIf="content">
+              {{content.title}} quantità {{content.quantity}} prezzo {{formatPrice(content.price)}}
+            </div>
+          </div>
+          <br>
 
-          <div class="coupon-price">{{formatPrice(couponPass.price)}}</div>
-
-          <p class="card-text mt-3">{{couponPass.description}}</p>
-
-          <p class="card-text">
-            <i class="fas fa-fw  fa-clock text-secondary"></i> Validità: {{formatUntil(couponPass.valid_until)}}
-            <br/>
-
-            <span *ngIf="couponPass.constraints">
-              <i class="fas fa-fw fa-map-marker-alt text-secondary"></i> {{couponPass.constraints}}
-
-              <img class="img-fluid d-block mt-3" alt="{{couponPass.constraints}} map"
-                   src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' +
-                    couponPass.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
-            </span>
-          </p>
-
-          <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
-          <button class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
+          <button  class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei ordini</button>
         </div>
 
       </div>
@@ -41,7 +31,7 @@
     <button type="button" class="close pull-right mb-4" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h3 class="mb-3">Codice coupon: {{couponPass.token.token}}</h3>
-    <qrcode class="d-table mx-auto" [qrdata]="couponPass.token.token" [size]="qrSize" [level]="'L'"></qrcode>
+    <h3 class="mb-3">Codice coupon: {{orderPass.order.id}}</h3>
+    <qrcode class="d-table mx-auto" [qrdata]="orderPass.order.id" [size]="qrSize" [level]="'L'"></qrcode>
   </div>
 </ng-template>
