--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -174,7 +174,7 @@ angular-file-uploader div.container {
 .coupon-price {
   position: absolute;
   background-color: #4dbd74;
-  border-radius: 0 0 0 0.25rem;
+  //border-radius: 0 0 0 0.25rem;
   top: 0;
   right: 0;
   font-size: 1.25em;
