--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -1,27 +1,28 @@
-<div *ngIf="done" class="table-responsive d-none d-md-none d-lg-block">
+<div *ngIf="done" class="container-fluid table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
+    <table class="table table-striped table-borderless">
+      <thead class="text-uppercase">
         <tr>
           <th scope="col" style="width: 20%">Ordine N°</th>
           <th scope="col" style="width: 30%">Data acquisto</th>
-          <th scope="col" style="width: 30%">Costo</th>
+          <th scope="col" style="width: 30%">Costo totale</th>
 
           <!--<th scope="col" style="width: 15%">Prezzo</th>-->
           <!--<th scope="col" style="width: 25%">Stato</th>-->
           <th scope="col" style="width: 20%"></th>
         </tr>
       </thead>
+      <tr class="bg-blue">
+        <td colspan="9"></td>
+      </tr>
 
-      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
-        <tr *ngIf="order">
+      <tbody class="col-sm-12 striped" >
+        <tr *ngFor="let order of ordersFull">
           <td>
             <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
           </td>
           <td>
-            <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
-            <i style="color: #999; font-size: 15px;"> ore:{{order.purchase_time.substr(11, 8)}}</i>
-
+            <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
           </td>
 
           <td>
@@ -45,21 +46,23 @@
       <tr>
         <th scope="col" style="width: 20%">Ordine N°</th>
         <th scope="col" style="width: 30%">Data acquisto</th>
-        <th scope="col" style="width: 30%">Costo</th>
+        <th scope="col" style="width: 30%">Costo totlae</th>
 
         <!--<th scope="col" style="width: 25%">Stato</th>-->
         <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
+      <tr class="bg-blue">
+        <td colspan="9"></td>
+      </tr>
 
-      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
-      <tr *ngIf="order ">
+      <tbody class="col-sm-12 striped" >
+      <tr *ngFor="let order of ordersFull">
         <td>
           <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
         </td>
         <td>
-          <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
-            <i style="color: #999; font-size: 15px;"> ore:{{order.purchase_time.substr(11, 8)}}</i>
+          <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
         </td>
         <td>
           <span style="font-size: 17px;">{{formatPrice(order.price)}}</span> <br/>
@@ -80,21 +83,23 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" style="width: 20%">N°</th>
+        <th scope="col" style="width: 20%">Ordine N°</th>
         <th scope="col" style="width: 30%">Data acquisto</th>
-        <th scope="col" style="width: 30%">Costo</th>
+        <th scope="col" style="width: 30%">Costo totale</th>
         <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
+      <tr class="bg-blue">
+        <td colspan="9"></td>
+      </tr>
 
-      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
-      <tr *ngIf="order">
+      <tbody class="col-sm-12 striped" >
+      <tr *ngFor="let order of ordersFull">
         <td>
           <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
         </td>
         <td>
-          <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
-            <br/><i style="color: #999; font-size: 15px;">ore:{{order.purchase_time.substr(11, 8)}}</i>
+          <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
 
         </td>
 
